--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "boatrace-crawl-api",
+  "name": "racecard-crawl-api",
   "private": true,
   "type": "module",
   "scripts": {
     "crawl": "node scripts/crawl.js"
-  },
-  "dependencies": {
-    "cheerio": "^1.0.0"
   }
 }
