--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "crawl": "node scripts/crawl.js"
+    "crawl": "node scripts/crawl.js",
+    "stats": "node scripts/fetch-stats.js"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0"
   }
 }
