--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -1,50 +1,32 @@
 name: Crawl & Publish
 
 on:
-  workflow_dispatch: {}         # Actions画面から手動実行
-  schedule:
-    - cron: "15 * * * *"        # 毎時15分（UTC）に実行（必要なら変えてね）
-
-permissions:
-  contents: write               # 生成物をコミットするため
-
-concurrency:
-  group: crawl-and-publish
-  cancel-in-progress: true
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: 'npm'
+          cache-dependency-path: '' # ロックファイルなしでもOKにする
 
-      - name: Install deps
-        run: npm ci || npm i
+      - name: Install dependencies
+        run: npm install
 
       - name: Run crawler
-        run: node scripts/crawl.js
-
-      # enrich.js がある場合だけ動かす（任意）
-      - name: Run enrich (optional)
-        if: ${{ hashFiles('scripts/enrich.js') != '' }}
-        run: node scripts/enrich.js
+        run: npm run crawl
 
       - name: Commit & Push changes
         run: |
-          git config user.name  "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git add -A
-            git commit -m "chore: publish $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            git push
-          else
-            echo "No changes to commit."
-          fi
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "Update data"
+          git push
