--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -1,32 +1,34 @@
 name: Crawl & Publish
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
+
+permissions:
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
+      # Node だけ用意（キャッシュ指定しない！）
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'npm'
-          cache-dependency-path: '' # ロックファイルなしでもOKにする
+          node-version: '20'
 
-      - name: Install dependencies
-        run: npm install
+      # 依存なしなので npm install は不要
+      # - name: Install deps
+      #   run: npm ci
 
       - name: Run crawler
-        run: npm run crawl
+        run: node scripts/crawl.js
 
       - name: Commit & Push changes
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "Update data"
-          git push
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git diff --cached --quiet && echo "No changes" || (git commit -m "chore: publish data [skip ci]" && git push)
