--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "crawl": "node scripts/crawl.js",
-    "stats": "node scripts/fetch-stats.js",
-    "enrich": "node scripts/enrich.js"
+    "stats": "node scripts/fetch-stats.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0"
