--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -13,21 +13,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Node だけ用意（ロックファイル無しでもOK）
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # 依存なしなので npm インストール不要
-      # - name: Install deps
-      #   run: npm ci
-
       - name: Run crawler
         run: node scripts/crawl.js
 
-      - name: Run enrich
-        run: node scripts/enrich.js
+      # まずは動作確認が済んだらコメント解除
+      - name: Fetch racer stats (boatrace-db)
+        run: node scripts/fetch-stats.js
 
       - name: Commit & Push changes
         run: |
