--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -1,7 +1,20 @@
 name: Crawl & Publish
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      racers:
+        description: "RACERS (例: 4349,3156) 空ならtodayの全出走者"
+        required: false
+        default: ""
+      batch:
+        description: "一度に処理する人数 (空=制限なし)"
+        required: false
+        default: ""
+      delayMs:
+        description: "1選手ごとの待機(ms) 例: 3000"
+        required: false
+        default: "3000"
 
 permissions:
   contents: write
@@ -16,21 +29,23 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
-      # ここを追加：依存を入れる（lockfile無しでもOK）
       - name: Install deps
         run: npm install --no-audit --no-fund
+
+      # 以降、pushはスクリプトが実施するのでcommitステップは不要
+      - name: Configure git (for script-side push)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Run crawler
         run: node scripts/crawl.js
 
-      - name: Fetch racer stats (boatrace-db)
+      - name: Fetch racer stats & push
+        env:
+          RACERS: ${{ inputs.racers }}
+          STATS_BATCH: ${{ inputs.batch }}
+          STATS_DELAY_MS: ${{ inputs.delayMs }}
         run: node scripts/fetch-stats.js
-
-      - name: Commit & Push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A
-          git diff --cached --quiet && echo "No changes" || (git commit -m "chore: publish data [skip ci]" && git push)
