--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -19,12 +19,20 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: crawl-publish
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -34,8 +42,7 @@ jobs:
       - name: Install deps
         run: npm install --no-audit --no-fund
 
-      # 以降、pushはスクリプトが実施するのでcommitステップは不要
-      - name: Configure git (for script-side push)
+      - name: Configure git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -43,9 +50,19 @@ jobs:
       - name: Run crawler
         run: node scripts/crawl.js
 
-      - name: Fetch racer stats & push
+      - name: Fetch racer stats
         env:
           RACERS: ${{ inputs.racers }}
           STATS_BATCH: ${{ inputs.batch }}
           STATS_DELAY_MS: ${{ inputs.delayMs }}
         run: node scripts/fetch-stats.js
+
+      - name: Commit & Push changes
+        run: |
+          git add -A
+          if ! git diff --cached --quiet; then
+            git commit -m "Update racer stats [skip ci]"
+            git push
+          else
+            echo "No changes to commit."
+          fi
