--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -1,6 +1,7 @@
 name: Crawl & Publish
 
 on:
+  # 手動実行
   workflow_dispatch:
     inputs:
       racers:
@@ -15,6 +16,9 @@ on:
         description: "1選手ごとの待機(ms) 例: 3000"
         required: false
         default: "3000"
+  # 毎日 07:00 JST に自動実行（＝UTC 22:00）
+  schedule:
+    - cron: "0 20 * * *"
 
 permissions:
   contents: write
@@ -52,9 +56,10 @@ jobs:
 
       - name: Fetch racer stats
         env:
+          # schedule では inputs が空なので、delay は 3000 にフォールバック
           RACERS: ${{ inputs.racers }}
           STATS_BATCH: ${{ inputs.batch }}
-          STATS_DELAY_MS: ${{ inputs.delayMs }}
+          STATS_DELAY_MS: ${{ inputs.delayMs || '3000' }}
         run: node scripts/fetch-stats.js
 
       - name: Commit & Push changes
