--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -13,12 +13,12 @@ on:
         required: false
         default: ""
       delayMs:
-        description: "1選手ごとの待機(ms) 例: 3000"
+        description: "1選手ごとの待機(ms)"
         required: false
         default: "3000"
-  # 毎日 07:00 JST に自動実行（＝UTC 22:00）
+  # 毎朝 05:00 JST（= 前日 20:00 UTC）
   schedule:
-    - cron: "0 22 * * *"
+    - cron: "0 20 * * *"
 
 permissions:
   contents: write
@@ -56,20 +56,16 @@ jobs:
 
       - name: Fetch racer stats
         env:
-          # schedule では inputs が空なので、delay は '3000' にフォールバック
           RACERS: ${{ inputs.racers }}
           STATS_BATCH: ${{ inputs.batch }}
           STATS_DELAY_MS: ${{ inputs.delayMs || '3000' }}
         run: node scripts/fetch-stats.js
 
-      - name: Build picks (score races)
-        run: node scripts/score-race.js
-
       - name: Commit & Push changes
         run: |
           git add -A
           if ! git diff --cached --quiet; then
-            git commit -m "Update programs, stats and picks [skip ci]"
+            git commit -m "Update racer stats [skip ci]"
             git push
           else
             echo "No changes to commit."
