--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "crawl": "node scripts/crawl.js",
-    "stats": "node scripts/fetch-stats.js"
+    "stats": "node scripts/fetch-stats.js",
+    "exh:fetch": "node scripts/fetch-exhibition.js",
+    "exh:merge": "node scripts/merge-exhibition.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0"
