--- a/.github/workflows/exhibition.yml
+++ b/.github/workflows/exhibition.yml
@@ -5,7 +5,7 @@ on:
     # 毎日07:00〜22:00 JST (日本時間) 1分間隔
     # JST=UTC+9 なので、UTCでは前日22:00〜当日13:00
     - cron: "* 22-23 * * *"  # 前日22時〜23時UTC = 当日07時〜08時JST
-    - cron: "* 0-13 * * *"   # 当日09時〜22時JST
+    - cron: "* 0-12 * * *"   # 当日09時〜22時JST
 
   workflow_dispatch:
     inputs:
@@ -31,10 +31,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: "20" }
+        with:
+          node-version: "20"
 
       - name: Install deps
-        run: npm ci || npm i --no-audit --no-fund
+        run: npm install --no-audit --no-fund
 
       - name: Run exhibition builder (skip if already exists)
         env:
