--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "exhibition": "node scripts/fetch-exhibition.js"
   },
   "dependencies": {
-    "cheerio": "^1.0.0"
+    "cheerio": "^1.0.0",
+    "node-fetch": "^3.3.2"
   }
 }
