--- a/.github/workflows/exhibition-direct.yml
+++ b/.github/workflows/exhibition-direct.yml
@@ -20,41 +20,57 @@ on:
 permissions:
   contents: write
 
+# 同じブランチでの並列実行を防止（衝突回避）
+concurrency:
+  group: exhibition-direct-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+        with:
+          # rebase/push の安全性向上
+          fetch-depth: 0
+
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
 
       - name: Install deps
         run: npm ci || npm i --no-audit --no-fund
 
-      # デバッグ（入力確認）
+      # 入力確認
       - name: Echo inputs
         run: |
           echo "date=${{ inputs.date }}"
           echo "pid=${{ inputs.pid }}"
           echo "race=${{ inputs.race }}"
 
-      # 直接クロール（env で渡す）
+      # 直接クロール（環境変数で指定）
       - name: Run direct exhibition crawler
         env:
           TARGET_DATE:  ${{ inputs.date }}
           TARGET_PIDS:  ${{ inputs.pid }}
           TARGET_RACES: ${{ inputs.race }}
-        run: node scripts/fetch-exhibition-direct.js --skip-existing
+        run: |
+          set -euo pipefail
+          node scripts/fetch-exhibition-direct.js --skip-existing
 
+      # 競合しにくい順序：pull -> add -> commit -> push
       - name: Commit & push results
         run: |
+          set -euo pipefail
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git pull --rebase
+
           git add -A
           if ! git diff --cached --quiet; then
             git commit -m "exhibition direct: ${{ inputs.date }} ${{ inputs.pid }} ${{ inputs.race }} [skip ci]"
-            git pull --rebase
             git push
           else
             echo "No changes."
