--- a/.github/workflows/crawl-and-publish.yml
+++ b/.github/workflows/crawl-and-publish.yml
@@ -1,7 +1,7 @@
+# .github/workflows/crawl-publish.yml
 name: Crawl & Publish
 
 on:
-  # 手動実行
   workflow_dispatch:
     inputs:
       racers:
@@ -16,9 +16,8 @@ on:
         description: "1選手ごとの待機(ms)"
         required: false
         default: "3000"
-  # 毎朝 05:00 JST（= 前日 20:00 UTC）
   schedule:
-    - cron: "0 20 * * *"
+    - cron: "0 20 * * *"  # 05:00 JST
 
 permissions:
   contents: write
@@ -30,7 +29,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 90
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,17 +48,17 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          # 念のため
           git config pull.rebase true
 
-      - name: Run crawler
+      - name: Run crawler (programs today)
         run: node scripts/crawl.js
 
-      - name: Fetch racer stats
+      - name: Fetch racer stats (incremental write)
         env:
           RACERS: ${{ inputs.racers }}
           STATS_BATCH: ${{ inputs.batch }}
           STATS_DELAY_MS: ${{ inputs.delayMs || '3000' }}
+          STATS_OVERWRITE: "0"   # 既存はスキップ（必要なら手動実行で1に）
         run: node scripts/fetch-stats.js
 
       - name: Commit & Push changes (with rebase & retry)
@@ -72,9 +70,8 @@ jobs:
             exit 0
           fi
 
-          git commit -m "Update racer stats [skip ci]"
+          git commit -m "Update programs & racer stats [skip ci]"
 
-          # push→reject 対策でリトライ (最大5回)
           n=0
           until [ $n -ge 5 ]
           do
@@ -83,7 +80,6 @@ jobs:
               exit 0
             fi
             echo "Push rejected. Rebasing onto remote and retrying... ($((n+1))/5)"
-            # 最新取り込み（作業ツリーに変更があっても安全に）
             git pull --rebase --autostash
             n=$((n+1))
             sleep 2
