--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -19,7 +19,6 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
       - name: Checkout
@@ -33,35 +32,46 @@ jobs:
       - name: Install deps
         run: |
           npm ci || npm install
+          npm ls || true
 
-      # ← ここで起動〜待機〜叩くまでを一気にやる
       - name: Start API and hit endpoint
         env:
           DATE: ${{ github.event.inputs.date }}
           PID:  ${{ github.event.inputs.pid }}
           RACE: ${{ github.event.inputs.race }}
+          PORT: 3000
         run: |
           set -euxo pipefail
-          # 起動をバックグラウンド化して PID 保存＆ログ保存
+
+          # サーバ起動（ログ保存）
           node server.js > server.log 2>&1 & echo $! > server.pid
 
-          # 最大60秒待機（/ready が無ければ / を叩いてもOK）
-          for i in {1..60}; do
-            if curl -fsS "http://127.0.0.1:3000/ready" >/dev/null 2>&1 || \
-               curl -fsS "http://127.0.0.1:3000" >/dev/null 2>&1; then
-              echo "API is up"; break
+          # 起動ログを追跡（別プロセス）
+          tail -f server.log &
+          TAIL_PID=$!
+
+          # 最大60秒待機（/ready または / どちらかが200ならOK）
+          for i in $(seq 1 60); do
+            if curl -fsS "http://127.0.0.1:${PORT}/ready" >/dev/null 2>&1 || \
+               curl -fsS "http://127.0.0.1:${PORT}/" >/dev/null 2>&1; then
+              echo "API is up"
+              kill $TAIL_PID || true
+              break
             fi
             echo "waiting API (${i}s) ..."
             sleep 1
           done
 
+          # 応答テスト
           echo "Request: ${DATE}/${PID}/${RACE}"
-          curl -sS "http://127.0.0.1:3000/api/integrate/v1/${DATE}/${PID}/${RACE}" -o response.json
+          curl -sS "http://127.0.0.1:${PORT}/api/integrate/v1/${DATE}/${PID}/${RACE}" -o response.json || {
+            echo "API call failed, server.log follows:"; cat server.log; exit 1;
+          }
 
+          # 生成物の存在確認
           echo "=== API response (first 2000 chars) ==="
           head -c 2000 response.json || true
           echo
-          echo "=== integrated files ==="
           ls -la public/integrated/v1 || true
           find public/integrated/v1 -type f -maxdepth 3 || true
 
@@ -74,7 +84,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: integrated-json
+          name: integrated-json-and-logs
           path: |
             public/integrated/v1/**/*.json
             response.json
