--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -1,18 +1,18 @@
-name: Manual Integrate Test (fixed)
+name: Manual Integrate Test
 
 on:
   workflow_dispatch:
     inputs:
       date:
-        description: "開催日 YYYYMMDD（例: 20250810 or today）"
+        description: "開催日 YYYYMMDD or 'today'"
         required: true
         default: "today"
       pid:
-        description: "場コード 01..24（例: 04）"
+        description: "場コード 01..24"
         required: true
         default: "04"
       race:
-        description: "レース番号 1R..12R（例: 1R）"
+        description: "レース番号 1R..12R"
         required: true
         default: "1R"
 
@@ -29,11 +29,9 @@ jobs:
         with:
           node-version: 20
 
-      # 依存が package.json に無くても起動できるよう express を強制インストール
       - name: Install deps
         run: |
           npm ci || npm install
-          npm install express
 
       - name: Start API and hit endpoint
         env:
@@ -43,36 +41,37 @@ jobs:
           RACE: ${{ github.event.inputs.race }}
         run: |
           set -e
-          # 起動（ログをファイルに）
+          echo ">>> starting API on :${PORT}"
           node server.js > server.log 2>&1 & echo $! > server.pid
 
-          # 60秒まで待機（/ready が無ければ / を使う）
-          for i in $(seq 1 60); do
-            if curl -fsS "http://127.0.0.1:${PORT}/ready" >/dev/null 2>&1 || \
-               curl -fsS "http://127.0.0.1:${PORT}/" >/dev/null 2>&1; then
-              echo "API is up after ${i}s"
-              break
+          # 起動待ち（/ready あればそれを、なければ / にフォールバック）
+          for i in $(seq 1 90); do
+            if curl -fsS "http://127.0.0.1:${PORT}/ready" >/dev/null 2>&1; then
+              echo "API ready (/${i}s)"; break
+            fi
+            if curl -fsS "http://127.0.0.1:${PORT}" >/dev/null 2>&1; then
+              echo "API reachable (/${i}s)"; break
             fi
             echo "waiting API (${i}s) ..."
             sleep 1
           done
 
-          echo "Request: ${DATE}/${PID}/${RACE}"
+          echo ">>> request: ${DATE}/${PID}/${RACE}"
           curl -sS "http://127.0.0.1:${PORT}/api/integrate/v1/${DATE}/${PID}/${RACE}" -o response.json || true
-
-          echo "=== API response (first 2000 chars) ==="
+          echo "=== response head ==="
           head -c 2000 response.json || true
           echo
-          echo "=== Integrated files ==="
+          echo "=== integrated dir ==="
           ls -la public/integrated/v1 || true
           find public/integrated/v1 -type f -maxdepth 3 || true
 
       - name: Stop API
         if: always()
         run: |
-          kill $(cat server.pid) 2>/dev/null || true
-          sleep 1
-          ps aux | grep node || true
+          if [ -f server.pid ]; then
+            kill "$(cat server.pid)" 2>/dev/null || true
+            sleep 1
+          fi
 
       - name: Upload artifacts (response + server log)
         if: always()
