--- a/.github/workflows/exhibition-direct.yml
+++ b/.github/workflows/exhibition-direct.yml
@@ -1,27 +1,7 @@
-# .github/workflows/exhibition-direct.yml
-name: Exhibition Direct Auto
+name: Test Exhibition Direct (Full Auto)
 
 on:
-  # JST 07:30〜22:00 に毎分実行（UTC換算）
-  schedule:
-    - cron: '30-59 22 * * *'  # UTC22:30〜22:59 = JST07:30〜07:59
-    - cron: '* 23 * * *'      # UTC23:00〜23:59 = JST08:00〜08:59
-    - cron: '* 0-12 * * *'    # UTC00:00〜12:59 = JST09:00〜21:59
-    - cron: '0 13 * * *'      # UTC13:00 = JST22:00
   workflow_dispatch:
-    inputs:
-      date:
-        description: "YYYYMMDD（例: 20250809、空なら今日JST）"
-        required: false
-        default: ""
-      pid:
-        description: "場コード（01..24、空なら全場）"
-        required: false
-        default: ""
-      race:
-        description: "レース番号（例: 1R、空なら全レース）"
-        required: false
-        default: ""
 
 permissions:
   contents: write
@@ -38,49 +18,18 @@ jobs:
       - name: Install deps
         run: npm ci || npm i --no-audit --no-fund
 
-      - name: Prepare date & targets
-        id: prep
+      # JST現在日付をセット
+      - name: 今日の日付 (JST)
         run: |
-          # 今日の日付（JST）
-          DATE_INPUT="${{ inputs.date }}"
-          if [ -z "$DATE_INPUT" ]; then
-            DATE=$(date -d '9 hours' +%Y%m%d)
-          else
-            DATE="$DATE_INPUT"
-          fi
+          TZ=Asia/Tokyo echo "TARGET_DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+          echo 'TARGET_PIDS="01,02,03,04,05,06,07,08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24"' >> $GITHUB_ENV
+          echo 'TARGET_RACES="1..12"' >> $GITHUB_ENV
 
-          # 全場 or 単場
-          if [ -z "${{ inputs.pid }}" ]; then
-            PIDS=$(seq -w 1 24)
-          else
-            PIDS=$(printf "%02d" "${{ inputs.pid }}")
-          fi
-
-          # 全レース or 単レース
-          if [ -z "${{ inputs.race }}" ]; then
-            RACES=$(seq 1 12 | sed 's/$/R/')
-          else
-            R=$(echo "${{ inputs.race }}" | sed -E 's/[Rr]$//')
-            RACES="${R}R"
-          fi
-
-          echo "DATE=$DATE" >> $GITHUB_ENV
-          echo "PIDS=$PIDS" >> $GITHUB_ENV
-          echo "RACES=$RACES" >> $GITHUB_ENV
-
+      # 展示情報クロール（404はスキップ）
       - name: Run exhibition crawler
         run: |
           set -euo pipefail
-          for PID in $PIDS; do
-            for RACE in $RACES; do
-              echo "=== ${DATE}/${PID}/${RACE} ==="
-              if node scripts/fetch-exhibition-direct.js "$DATE" "$PID" "$RACE" --skip-existing; then
-                echo " -> success"
-              else
-                echo " -> no data or error"
-              fi
-            done
-          done
+          node scripts/fetch-exhibition-direct.js "$TARGET_DATE" "$TARGET_PIDS" "$TARGET_RACES" --skip-existing
 
       - name: Commit & push results
         run: |
@@ -88,7 +37,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
           if ! git diff --cached --quiet; then
-            git commit -m "exhibition direct auto: $DATE [skip ci]"
+            git commit -m "exhibition direct: $TARGET_DATE all tracks all races [skip ci]"
             git pull --rebase
             git push
           else
