--- a/.github/workflows/exhibition-direct.yml
+++ b/.github/workflows/exhibition-direct.yml
@@ -1,10 +1,31 @@
 name: Test Exhibition Direct (Full Auto)
 
 on:
+  # 手動実行：空ならJST今日・全場・全Rで動く
   workflow_dispatch:
+    inputs:
+      date:
+        description: "YYYYMMDD（空ならJST今日）"
+        required: false
+        default: ""
+      pids:
+        description: "01..24 のカンマ or ALL（空ならALL）"
+        required: false
+        default: "ALL"
+      races:
+        description: "1..12 のカンマ/範囲 or ALL（空ならALL）"
+        required: false
+        default: "ALL"
+  # 毎分トリガ（UTC）。時間帯は後段のゲートでJST判定して外なら即スキップ
+  schedule:
+    - cron: "* * * * *"
 
 permissions:
   contents: write
+
+concurrency:
+  group: exhibition-direct
+  cancel-in-progress: false
 
 jobs:
   run:
@@ -18,27 +39,69 @@ jobs:
       - name: Install deps
         run: npm ci || npm i --no-audit --no-fund
 
-      # JST現在日付をセット
-      - name: 今日の日付 (JST)
-        run: |
-          TZ=Asia/Tokyo echo "TARGET_DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
-          echo 'TARGET_PIDS="01,02,03,04,05,06,07,08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24"' >> $GITHUB_ENV
-          echo 'TARGET_RACES="1..12"' >> $GITHUB_ENV
-
-      # 展示情報クロール（404はスキップ）
-      - name: Run exhibition crawler
+      # JST日付と時間帯ゲート、入力のデフォルト補完
+      - name: Prepare date & targets (JST)
+        id: prep
+        shell: bash
         run: |
           set -euo pipefail
-          node scripts/fetch-exhibition-direct.js "$TARGET_DATE" "$TARGET_PIDS" "$TARGET_RACES" --skip-existing
+
+          IN_DATE="${{ inputs.date || '' }}"
+          IN_PIDS="${{ inputs.pids || '' }}"
+          IN_RACES="${{ inputs.races || '' }}"
+
+          DATE_JST="$(TZ=Asia/Tokyo date +%Y%m%d)"
+          H="$(TZ=Asia/Tokyo date +%H)"
+          M="$(TZ=Asia/Tokyo date +%M)"
+          MINUTES=$((10#$H*60 + 10#$M))
+
+          # 実行許可は 07:30 <= JST < 22:00
+          START=$((7*60 + 30))
+          END=$((22*60))
+          RUN=0
+          if [ "$GITHUB_EVENT_NAME" = "workflow_dispatch" ]; then
+            RUN=1
+          else
+            if [ $MINUTES -ge $START ] && [ $MINUTES -lt $END ]; then
+              RUN=1
+            fi
+          fi
+
+          DATE="${IN_DATE:-$DATE_JST}"
+          PIDS="${IN_PIDS:-ALL}"
+          RACES="${IN_RACES:-ALL}"
+
+          echo "date=${DATE}"  >> "$GITHUB_OUTPUT"
+          echo "pids=${PIDS}"  >> "$GITHUB_OUTPUT"
+          echo "races=${RACES}" >> "$GITHUB_OUTPUT"
+          echo "run=${RUN}"    >> "$GITHUB_OUTPUT"
+
+          echo "JST now: $(TZ=Asia/Tokyo date '+%Y-%m-%d %H:%M') / RUN=$RUN"
+          echo "Targets -> date=$DATE pids=$PIDS races=$RACES"
+
+      - name: Skip outside JST window
+        if: steps.prep.outputs.run != '1'
+        run: echo "Outside JST 07:30-22:00 -> skip."
+
+      - name: Run exhibition crawler
+        if: steps.prep.outputs.run == '1'
+        run: |
+          set -euo pipefail
+          node scripts/fetch-exhibition-direct.js \
+            "${{ steps.prep.outputs.date }}" \
+            "${{ steps.prep.outputs.pids }}" \
+            "${{ steps.prep.outputs.races }}" \
+            --skip-existing
 
       - name: Commit & push results
+        if: steps.prep.outputs.run == '1'
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
           if ! git diff --cached --quiet; then
-            git commit -m "exhibition direct: $TARGET_DATE all tracks all races [skip ci]"
-            git pull --rebase
+            git commit -m "exhibition direct: ${{ steps.prep.outputs.date }} ${{ steps.prep.outputs.pids }} ${{ steps.prep.outputs.races }} [skip ci]"
+            git pull --rebase || true
             git push
           else
             echo "No changes."
